# shine-helper

./: .gitignore  VOICE_WAKE_ENHANCEMENT.md  console_log.txt  index.html  package-lock.json  package-offline.sh  package.json  start.bat  start.sh  test_audio.sh  vite.config.ts
.claude/: settings.local.json
.sisyphus/drafts/: voice-keyword-spotting-design.md
.sisyphus/plans/: voice-keyword-spotting-implementation-updated.md  voice-keyword-spotting-implementation.md
docs/: AUDIO_PERMISSION_FIX.md  KYLIN_TAURI_V1_SETUP.md  OPENCLAW_CONFIG.md  OPENCLAW_PERMISSION_FIX.md
docs/plans/: 2026-03-04-shine-helper-design.md  2026-03-04-shine-helper-implementation-plan.md  2026-03-04-shine-helper-openclaw-integration-design.md  2026-03-04-shine-helper-openclaw-integration-implementation-plan.md  2026-03-04-shine-helper-voice-input-design.md  2026-03-04-shine-helper-voice-input-implementation-plan.md  2026-03-08-shine-helper-voice-wake-design.md  2026-03-08-shine-helper-voice-wake-implementation-plan.md
docs/progress/: 2026-03-08-voice-wake-implementation-progress.md  2026-03-11-voice-wake-fix-and-enhancement.md  2026-03-13-voice-wake-auto-input-summary.md
docs/superpowers/plans/: 2026-03-12-voice-wake-auto-input.md
resources/openclaw/: README.txt
scripts/: generate_tts_audio.sh  package-offline.ps1
src/: App.vue  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  db.rs  lib.rs  main.rs  openclaw.rs  skills.rs  voice.rs
src-tauri/src/commands/: chat.rs  mod.rs  skills.rs  voice_cmd.rs  voice_wake.rs
src-tauri/src/voice/: asr_client.rs  audio_capture.rs  mod.rs  recognition.rs  state_machine.rs  tts_player.rs  wake_word.rs
src/components/: ChatInput.vue  ChatMessage.vue
src/composables/: useVoiceRecognition.ts  useVoiceWake.ts
src/providers/: TauriVoskProvider.ts  WebSocketVoskProvider.ts  index.ts
src/router/: index.ts
src/types/: voice.ts
src/views/: ChatView.vue  ConfigView.vue  SkillsView.vue
