[package]
name = "shine-helper"
version = "1.0.0"
description = "Shine Helper - Desktop AI Assistant"
authors = ["Shine Team"]
edition = "2021"
rust-version = "1.70"

[lib]
name = "shine_helper_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { git = "https://github.com/tauri-apps/tauri.git", tag = "tauri-v1.5.4", features = [] }

[dependencies]
tauri = { git = "https://github.com/tauri-apps/tauri.git", tag = "tauri-v1.5.4", features = [ "http-all", "shell-open"] }
tauri-codegen = { git = "https://github.com/tauri-apps/tauri.git", tag = "tauri-v1.5.4" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
bytes = "1"
# Audio processing
cpal = "0.15"           # Cross-platform audio capture
hound = "3.5"           # WAV file handling
rodio = "0.17"          # Audio playback
dasp_sample = "0.11"    # Audio sample conversion

# WebSocket
tokio-tungstenite = "0.21"
futures-util = "0.3"
url = "2"

rusqlite = { version = "0.31", features = ["bundled"] }
keyring = "3"
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
log = "0.4"
env_logger = "0.11"
thiserror = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[patch.crates-io]
wry = { path = "/tmp/wry-fix" }
