[package]
name = "shine-helper"
version = "1.0.0"
description = "Shine Helper - Desktop AI Assistant"
authors = ["Shine Team"]
edition = "2021"
rust-version = "1.70"

[lib]
name = "shine_helper_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "window-show", "window-set-focus", "window-unminimize", "shell-open", "http-all"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
bytes = "1"
tokio-tungstenite = "0.21"
futures-util = "0.3"
rusqlite = { version = "0.32", features = ["bundled"] }
keyring = "3"
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
log = "0.4"
env_logger = "0.11"
thiserror = "1"

# 音频相关依赖 (语音唤醒功能)
cpal = "0.15"           # 跨平台音频捕获
rodio = "0.17"          # 音频播放
dasp_sample = "0.11"    # 音频采样转换
hound = "3.5"           # WAV 音频处理
rand = "0.8"            # 随机选择 TTS 回复

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[patch.crates-io]
wry = { git = "https://github.com/tauri-apps/wry", rev = "wry-v0.22.6" }
